css/style.css
/* ... */
    .ftco-navbar-light.scrolled.awake {
      margin-top: 0px;
      -webkit-transition: .3s all ease-out;
      -o-transition: .3s all ease-out;
      transition: .3s all ease-out; }
    .ftco-navbar-light.scrolled.sleep {
      -webkit-transition: .3s all ease-out;
      -o-transition: .3s all ease-out;
      transition: .3s all ease-out; }
    .ftco-navbar-light.scrolled .navbar-brand {
      color: #fff;
      padding-top: 1rem;
      padding-bottom: 1rem;
      font-size: 24px; }

.navbar-brand {
  font-weight: 900;
  font-size: 24px;
  text-transform: uppercase; }

.hero h3.vr {
  -webkit-writing-mode: vertical-lr;
  -ms-writing-mode: tb-lr;
  writing-mode: vertical-lr;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  text-orientation: sideways;
  text-align: center;
  text-orientation: sideways;
  margin: 0rem;
  position: absolute;
  top: 0;
  left: 4em;
  height: 100%;
  text-transform: uppercase;
  font-weight: 500;
  letter-spacing: 5px;
  font-size: 16px;
  z-index: 1;
  color: rgba(0, 0, 0, 0.3); }
  @media (max-width: 1199.98px) {
    .hero h3.vr {
      opacity: 0;
      display: none; } }

.owl-carousel {
  position: relative; }
  .owl-carousel .owl-item {
    opacity: .4; }
    .owl-carousel .owl-item.active {
      opacity: 1; }
  .owl-carousel .owl-dots {
    text-align: center; }
    .owl-carousel .owl-dots .owl-dot {
      width: 10px;
      height: 10px;
      margin: 5px;
      border-radius: 50%;
      background: #e6e6e6;
      position: relative; }
      .owl-carousel .owl-dots .owl-dot:after {
        position: absolute;
        top: -2px;
        left: -2px;
        right: 0;
        bottom: 0;
        width: 14px;
        height: 14px;
        content: '';
        border: 1px solid rgba(255, 255, 255, 0.3);
        -webkit-border-radius: 50%;
        -moz-border-radius: 50%;
        -ms-border-radius: 50%;
        border-radius: 50%; }
      .owl-carousel .owl-dots .owl-dot:hover, .owl-carousel .owl-dots .owl-dot:focus {
        outline: none !important; }
      .owl-carousel .owl-dots .owl-dot.active {
        background: #b3b3b3; }
  .owl-carousel.home-slider {
    position: relative;
    height: 750px;
    z-index: 0; }
    .owl-carousel.home-slider .slider-item {
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center center;
      height: 750px;
      position: relative;
      z-index: 0; }
      @media (max-width: 1199.98px) {
        .owl-carousel.home-slider .slider-item {
          background-position: center center !important; } }
      .owl-carousel.home-slider .slider-item .overlay {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        background: #000000;
        opacity: 0; }
      .owl-carousel.home-slider .slider-item .slider-text {
        height: 750px;
        z-index: 0; }
        @media (max-width: 991.98px) {
          .owl-carousel.home-slider .slider-item .slider-text {
            text-align: center; } }
        .owl-carousel.home-slider .slider-item .slider-text .one-third {
          width: 60%;
          position: relative;
          z-index: -1; }
          .owl-carousel.home-slider .slider-item .slider-text .one-third .overlay {
            position: absolute;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
            background: #000000;
            opacity: 0; }
          @media (max-width: 1199.98px) {
            .owl-carousel.home-slider .slider-item .slider-text .one-third {
              width: 85%; } }
          @media (max-width: 991.98px) {
            .owl-carousel.home-slider .slider-item .slider-text .one-third {
              width: 100%;
              z-index: 0; }
              .owl-carousel.home-slider .slider-item .slider-text .one-third .overlay {
                opacity: .3; }
              .owl-carousel.home-slider .slider-item .slider-text .one-third:after {
                opacity: 0; } }
        .owl-carousel.home-slider .slider-item .slider-text .one-forth {
          width: 50%;
          position: relative; }
          @media (min-width: 768px) {
            .owl-carousel.home-slider .slider-item .slider-text .one-forth {
              position: absolute;
              top: 0;
              left: 0;
              bottom: 0;
              right: 0;
              width: 1200px;
              margin: 0 auto; } }
          @media (max-width: 991.98px) {
            .owl-carousel.home-slider .slider-item .slider-text .one-forth {
              width: 100%;
              position: absolute;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              z-index: 1;
              padding: 1em;
              overflow:scroll; } }
          .owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
            width: 100%; }
            @media (min-width: 992px) {
              .owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
                position: absolute;
                top: 50%;
                left: 0;
                -webkit-transform: translateY(-50%);
                -ms-transform: translateY(-50%);
                transform: translateY(-50%);
                right: 0;
                max-width: 50%;
                padding-left: 45px;
                padding-right: 3em; } }
        .owl-carousel.home-slider .slider-item .slider-text .subheading {
          color: #000000;
          font-weight: 600;
          font-size: 14px;
          letter-spacing: 3px;
          text-transform: uppercase;
          color: #ffbd39; }
        .owl-carousel.home-slider .slider-item .slider-text .text {
          position: relative;
          z-index: 1; }
        .owl-carousel.home-slider .slider-item .slider-text h1 {
          font-size: 60px;
          color: #fff;
          line-height: 1.2;
          font-weight: 800; }
/* ... */

